--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,13 +1,23 @@
 
-
 cmake_minimum_required(VERSION 3.4.1)
 
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
+#判断编译器类型,如果是gcc编译器,则在编译选项中加入c++11支持
 
+if(CMAKE_COMPILER_IS_GNUCXX)
+    set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+    message(STATUS "optional:-std=c++11")
+endif(CMAKE_COMPILER_IS_GNUCXX)
+
+
+
+project("Video_Audio")
 include_directories(./include)
 
 set(source_dir ./src)
 aux_source_directory(${source_dir} src_list)
 aux_source_directory(${source_dir}/crash src_list)
+aux_source_directory(${source_dir}/mmkv src_list)
 add_library( # Sets the name of the library.
         native-lib
 
