--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.peakmain.video_audio"
@@ -19,15 +18,15 @@ android {
                 cppFlags ""
             }
         }
-/*        ndk {
-            abiFilters "armeabi-v7a"
-        }*/
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug{
+            debuggable true
         }
     }
     externalNativeBuild {
@@ -37,8 +36,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -57,4 +56,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.github.Peakmain:BasicUI:1.1.0-androidx'
 
+}
+repositories {
+    mavenCentral()
 }
