Medcodec实现屏幕录制编码成h264

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
         }
         debug{
             debuggable true
+            buildConfigField("String","TAG","\"TAG\"")
         }
     }
     externalNativeBuild {
