--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".App"
@@ -23,6 +24,7 @@
         <activity android:name=".activity.SimpleActivity" />
         <activity android:name=".activity.simple.H264PlayerActivity" />
         <activity android:name=".activity.MMKVActivity" />
+        <activity android:name=".activity.CameraActivity" />
     </application>
 
 </manifest>
