手写屏幕录制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.peakmain.video_audio">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -25,6 +27,7 @@
         <activity android:name=".activity.simple.H264PlayerActivity" />
         <activity android:name=".activity.MMKVActivity" />
         <activity android:name=".activity.CameraActivity" />
+        <activity android:name=".activity.ProjectScreenActivity" />
     </application>
 
 </manifest>
