--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.github.Peakmain:BasicUI:1.1.0-androidx'
     implementation "androidx.camera:camera-core:1.0.0-alpha05"
     implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
+    implementation "org.java-websocket:Java-WebSocket:1.4.0"
 }
 repositories {
     mavenCentral()
