--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".activity.simple.H264PlayerActivity" />
         <activity android:name=".activity.MMKVActivity" />
         <activity android:name=".activity.CameraActivity" />
-        <activity android:name=".activity.ProjectScreenActivity" />
+        <activity android:name=".activity.ProjectScreenAcceptActivity" />
+        <activity android:name=".activity.ProjectScreenSendActivity" />
     </application>
 
 </manifest>
