--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -16,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.CameraActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +28,7 @@
         <activity android:name=".activity.SimpleActivity" />
         <activity android:name=".activity.simple.H264PlayerActivity" />
         <activity android:name=".activity.MMKVActivity" />
-        <activity android:name=".activity.CameraActivity" />
+        <activity android:name=".activity.Camera2XActivity" />
         <activity android:name=".activity.ProjectScreenAcceptActivity" />
         <activity android:name=".activity.ProjectScreenSendActivity" />
     </application>
