--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
+android.useNewApkCreator=false
